--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -1,47 +1,84 @@
+@import '../../../assets/scss/variables';
+
 .login-container {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  .login-wrap {
-    width: 550px;
-    height: 500px;
+  background-image: url('../../../assets/images/developer-bg.jpg');
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  .login-form {
+    width: 465px;
+    height: 540px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: -webkit-linear-gradient(top,#7579ff,#b224ef);
+    background-color: $purple_logo_psl;
     padding: 55px 55px 37px;
     border-radius: 10px;
-    &__text {
-      font-family: "Poppins", sans-serif;
+
+    &__title {
+      font-family: $main_font;
+      margin-bottom: 50px;
+      font-size: 18px;
+      color: white;
+      font-weight: bold;
     }
 
-    &__input {
-        font-family: 'Poppins-Regular';
-        font-size: 16px;
+    &__img {
+      margin-bottom: 50px;
+      color: #333;
+      width: 200px;
+    }
+
+    &__text {
+      font-family: 'Poppins', sans-serif;
+    }
+    &__validation {
+      width: 70%;
+      position: relative;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.24);
+      margin-bottom: 30px;
+      &__input {
+        font-family: $main_font;
+        font-size: 17px;
         color: #fff;
         line-height: 1.2;
         display: block;
-        width: 80px;
+        width: 100%;
         height: 45px;
         background: 0 0;
         padding: 0 5px 0 38px;
         outline: none;
         border: none;
-        border-bottom: 2px solid rgba(255,255,255,.24);
+        overflow: visible;
+
+        &::placeholder {
+          color: white;
+          font-family: $main_font;
+          font-size: 17px;
+        }
+      }
     }
     &__btn {
-      font-family: "Poppins", sans-serif;
-      font-size: 15px;
+      font-family: $main_font;
+      font-size: 17px;
       line-height: 1.5;
-      color: #fff;
-      text-transform: uppercase;
-      width: 100px;
+      color: white;
+      width: 200px;
       height: 50px;
       border-radius: 25px;
-      background: #57b846;
+      margin-top: 25px;
+      background: #007bff;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
     }
   }
 }
