Added approach for routes

--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -9,7 +9,7 @@
     </span>
 
     <div class="login-form__validation">
-      <input class="login-form__validation__input" type="email" placeholder="Email" formControlName="Email">
+      <input class="login-form__validation__input" type="email" placeholder="Email" formControlName="email">
     </div>
 
     <div class="login-form__validation">
