--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,9 +2,8 @@
 
     <img class="navbar_container__logo" src="../../../assets/images/psllogo_navbar.png">
 
-    <a href="#home" class="active">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <button class="btn btn-primary navbar_container__signOut-btn">
+      Log Out
+    </button>
 </div>
 
