Added more styles to work to calendar

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,6 +4,6 @@ $main_font: 'Montserrat', sans-serif;
 $size_main_font: 18px;
 $purple_psl_opacity: rgba(128,0,128, 0.3);
 $color_main_font: white;
-$blue_font_bootstrap: #007bff;
+$blue_bootstrap: #007bff;
 $validation_alert: red;
 $blue_opacity: rgba(128,0,128, 0.3);
