--- a/src/app/staff/calendar/calendar.component.html
+++ b/src/app/staff/calendar/calendar.component.html
@@ -1,1 +1,28 @@
-<h1> test </h1>
+<div class="calendar-container">
+
+
+  <div class="calendar-container__wrap-controls">
+    <div class="calendar-container__wrap-controls__button-left">
+      <i class="fas fa-chevron-left"></i>
+    </div>
+    <span class="calendar-container__wrap-controls__text">
+      12 September, 2019
+    </span>
+    <div class="calendar-container__wrap-controls__button-right">
+      <i class="fas fa-chevron-right"></i>
+    </div>
+  </div>
+
+
+  <div class="calendar-container__wrap-view-type">
+    <div class="calendar-container__wrap-view-type__month">
+      Month
+
+    </div>
+
+    <div class="calendar-container__wrap-view-type__week">
+      Week
+    </div>
+  </div>
+
+</div>
