--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -19,15 +19,15 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: $purple_logo_psl;
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 55px 55px 37px;
     border-radius: 10px;
-
+    
     &__title {
       font-family: $main_font;
       margin-bottom: 50px;
-      font-size: 18px;
-      color: white;
+      font-size: 19px;
+      color: #333;
       font-weight: bold;
     }
 
@@ -48,19 +48,22 @@
       &__input {
         font-family: $main_font;
         font-size: 17px;
-        color: #fff;
+        color: #333;
         line-height: 1.2;
         display: block;
         width: 100%;
         height: 45px;
+        border-bottom: 1px solid #CCC;
+        border-right: none;
+        border-left: none;
+        border-top: none;
         background: 0 0;
         padding: 0 5px 0 38px;
         outline: none;
-        border: none;
         overflow: visible;
 
         &::placeholder {
-          color: white;
+          color: #333;
           font-family: $main_font;
           font-size: 17px;
         }
