--- a/src/app/staff/calendar/calendar.component.html
+++ b/src/app/staff/calendar/calendar.component.html
@@ -3,13 +3,13 @@
   <div class="calendar-header__wrap-view-type">
     <div class="btn btn-secondary calendar-header__wrap-view-type__month"
         (click)="setView(CalendarView.Month)"
-        [class.active]="view === CalendarView.Month"   
+        [class.active]="currentView === CalendarView.Month"
      >
       Month
     </div>
     <div class="btn btn-secondary calendar-header__wrap-view-type__week"
          (click)="setView(CalendarView.Week)"
-         [class.active]="view === CalendarView.Week"   
+         [class.active]="currentView === CalendarView.Week"
      >
       Week
     </div>
@@ -18,46 +18,52 @@
   <div class="calendar-header__wrap-controls">
     <div class="btn btn-primary calendar-header__wrap-controls__button-left"
          mwlCalendarPreviousView
-         [view]="view"
+         [view]="currentView"
          [(viewDate)]="viewDate"
         >
       <i class="fas fa-chevron-left"></i>
     </div>
     <span class="calendar-header__wrap-controls__text"
           mwlCalendarToday
-          [(viewDate)]="viewDate"  
+          [(viewDate)]="viewDate"
         >
-        {{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}
+        {{ viewDate | calendarDate:(currentView+ 'ViewTitle'):'en' }}
   </span>
     <div class="btn btn-primary calendar-header__wrap-controls__button-right"
          mwlCalendarNextView
-         [view]="view"
+         [view]="currentView"
          [(viewDate)]="viewDate"
         >
       <i class="fas fa-chevron-right"></i>
     </div>
   </div>
 
-  <button class="btn btn-primary calendar-header__btn" type="submit"> Program Interview </button>
+  <button class="btn btn-primary calendar-header__btn" (click)="createInterview()" type="submit">
+    Program Interview
+  </button>
 
 </div>
 
 
 <div class="calendar-container">
 
-  <div [ngSwitch]="view">
+  <div [ngSwitch]="currentView">
 
     <mwl-calendar-month-view
       *ngSwitchCase="'month'"
       [viewDate]="viewDate"
+      [events]="calendarEvents"
+      (eventClicked)="editInterview($event)"
       >
     </mwl-calendar-month-view>
     <mwl-calendar-week-view
       *ngSwitchCase="'week'"
       [viewDate]="viewDate"
+      [events]="calendarEvents"
+      (eventClicked)="editInterview($event)"
       >
     </mwl-calendar-week-view>
-    
+
   </div>
 
 </div>
