--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import './assets/scss/variables';
 
 html {
   height: 100%;
@@ -23,4 +24,8 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 background-color: darkgrey;
 outline: 1px solid slategrey;
+}
+
+.cal-month-view .cal-header .cal-cell {
+  font-family: $main_font;
 }
