--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
     <img class="navbar_container__logo" src="../../../assets/images/psllogo_navbar.png">
 
-    <button class="btn btn-primary navbar_container__signOut-btn">
+    <button (click)="onClickLogOut()" class="btn btn-primary navbar_container__signOut-btn">
       Log Out
     </button>
 </div>
