--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $purple_logo_psl: #2d2045;
 $blue_logo_psl: rgb(33, 212, 253);
-$main_font: 'Montserrat', sans-serif;
+$main_font: 'Poppins', sans-serif;
 $size_main_font: 18px;
 $purple_psl_opacity: rgba(128,0,128, 0.3);
 $color_main_font: white;
