--- a/src/app/staff/calendar/calendar.component.scss
+++ b/src/app/staff/calendar/calendar.component.scss
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: center;
     $size: 1.8rem;
-    box-shadow: inset 0 0 1em gold;
+    box-shadow: inset 0 0 1em $blue_bootstrap;
     border-radius: 25px;
 
     &__text {
@@ -36,6 +36,10 @@
       color: #333;
       font-size: 18px;
       cursor: pointer;
+      width: 210px;
+      align-items: center;
+      display: flex;
+      justify-content: center;
     }
 
     &__button-left {
