--- a/src/app/staff/create-interview-modal/create-interview-modal.component.html
+++ b/src/app/staff/create-interview-modal/create-interview-modal.component.html
@@ -1,45 +1,83 @@
-<div class="modal-header">
-    <h5 class="modal-title">Program an interview</h5>
-</div>
-<div class="modal-container">
-    <div class="modal-container__element">
-        <span class="modal-container__element__text">
-            Candidate
-        </span>
-        <input class="modal-container__element__input"
-            placeholder="user@hotmail.com">
-    </div>
-    <div class="modal-container__element">
-        <span class="modal-container__element__text">
-            PSL Interviewer
-        </span>
-        <input class="modal-container__element__input"
-            placeholder="svelezr@psl.com.co">
-    </div>
-    <div class="modal-container__element">
-        <label class="modal-container__element__text" for="date">
-            Date
-        </label>
-        <div class="modal-container__element__date-wrap">
-            <input class="modal-container__element__date-wrap__input"
-                type="text"
-                name="date"
-                ngbDatepicker
-                #d1="ngbDatepicker"
-                placeholder="Select a date"
-                />
-            <button type="button"
-                class="btn btn-primary modal-container__element__date-wrap__btn"
-                (click)="d1.toggle()">
-                <i class="fas fa-calendar-alt"></i>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Program an interview</h5>
+            <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
             </button>
         </div>
-    </div>
-
-    <div class="modal-container__element">
-        <span class="modal-container__element__text">
-           Start Time
-        </span>
-        <app-time-picker></app-time-picker>
+        <form [formGroup]="interviewForm" (ngSubmit)="submitForm()" class="modal-container" #form="ngForm">
+            <div class="row">
+                <div class="col">
+                    <div class="modal-container__element">
+                        <span class="modal-container__element__text">
+                          Candidate
+                        </span>
+                        <select class="modal-container__element__input"
+                                formControlName="candidate">
+                                <option *ngFor="let candidate of candidates" [value]="candidate.email">{{ candidate.email }}</option>
+                        </select>
+                    </div>
+                    <div class="modal-container__element">
+                        <span class="modal-container__element__text">
+                            Interviewer
+                        </span>
+                        <select class="modal-container__element__input"
+                                formControlName="interviewer"
+                             >
+                             <option *ngFor="let interviewer of interviewers" [value]="interviewer.email">{{ interviewer.email }}</option>
+                        </select>
+                    </div>
+                    <div class="modal-container__element">
+                        <label class="modal-container__element__text" for="date">
+                            Date
+                        </label>
+                        <div class="modal-container__element__date-wrap">
+                            <input
+                                class="modal-container__element__date-wrap__input"
+                                type="text"
+                                name="date"
+                                ngbDatepicker
+                                #d1="ngbDatepicker"
+                                placeholder="Select a date"
+                                formControlName="date"
+                                />
+                            <button type="button"
+                                class="btn btn-primary
+                                modal-container__element__date-wrap__btn"
+                                (click)="d1.toggle()">
+                                <i class="fas fa-calendar-alt"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="modal-container__element">
+                         <span class="modal-container__element__text">
+                                    Job
+                         </span>
+                         <select class="modal-container__element__input"
+                                 formControlName="job">
+                            <option *ngFor="let job of jobs" [value]="job">{{ job }}</option>
+                         </select>
+                    </div>
+                    <div class="modal-container__element">
+                        <span  class="modal-container__element__text" style="margin-bottom: 25px">
+                          Start Time
+                        </span>
+                        <ngb-timepicker formControlName="startTime" [meridian]="true"></ngb-timepicker>
+                    </div>
+                    <div class="modal-container__element">
+                        <span class="modal-container__element__text">
+                           End Time
+                        </span>
+                        <ngb-timepicker formControlName="endTime" [meridian]="true"></ngb-timepicker>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary modal-container__btn" [disabled]="!form.valid" type="submit">
+               Create
+            </button>
+        </form>
     </div>
 </div>
