--- a/src/app/staff/create-interview-modal/create-interview-modal.component.scss
+++ b/src/app/staff/create-interview-modal/create-interview-modal.component.scss
@@ -1,59 +1,74 @@
-@import '../../../assets/scss/variables';
-
-.modal-header {
+@import "../../../assets/scss/variables";
+.modal-dialog {
   display: flex;
+  margin: 0 auto;
   align-items: center;
-  justify-content: center;
-  .modal-title{
-    font-family: $main_font;
-    font-weight: bold;
-  }
-}
+  max-width: 1000px !important;
 
-.modal-container {
-  display: flex;
-  font-family: $main_font;
-  font-weight: bold;
-  justify-content: center;
-  flex-direction: column;
-  &__element {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-
-    &__text {
-      margin-bottom: 15px;
-      padding: 30px;
-    }
-
-    &__input {
-      border-radius: 10px;
-      border: 1px solid rgba(0, 0, 0, 0.15);
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-      background-color: #f7f7f7;
-      height: 40px;
-    }
-
-    &__date-wrap {
+  .modal-content {
+    .modal-header {
       display: flex;
       align-items: center;
-
-      &__input {
+      .modal-title {
         font-family: $main_font;
-        padding: 11px;
-        border-radius: 1em 0 0 1em;
-        background-color: #f7f7f7;
-        width: 178px;
-        height: 40px;
+        font-weight: bold;
+        margin: 0 auto;
+        margin-left: 365px;
       }
-
-      &__btn {
+    }
+    .modal-container {
+      display: flex;
+      font-family: $main_font;
+      justify-content: center;
+      flex-direction: column;
+      &__element {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 13px;
-        border-radius: 0 1em 1em 0;
-        height: 40px;
+
+        &__text {
+          margin-bottom: 15px;
+          padding: 20px;
+          width: 185px;
+        }
+
+        &__input {
+          border-radius: 10px;
+          border: 1px solid rgba(0, 0, 0, 0.15);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          background-color: #f7f7f7;
+          height: 40px;
+          width: 210px;
+        }
+
+        &__date-wrap {
+          display: flex;
+          align-items: center;
+
+          &__input {
+            font-family: $main_font;
+            padding: 11px;
+            border-radius: 10px 0 0 10px;
+            background-color: #f7f7f7;
+            width: 174px;
+            height: 40px;
+          }
+
+          &__btn {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 13px;
+            border-radius: 0 10px 10px 0;
+            height: 40px;
+          }
+        }
+      }
+      &__btn {
+        width: 120px;
+        margin: 0 auto;
+        border-radius: 10px;
+        margin-bottom: 20px;
       }
     }
   }
