--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,27 @@ outline: 1px solid slategrey;
 .cal-month-view .cal-header .cal-cell {
   font-family: $main_font;
 }
+
+.cal-week-view *{
+  font-family: $main_font;
+}
+
+.cal-month-view .cal-day-cell.cal-today{
+  background-color: #90ee90;
+}
+
+.modal-dialog{
+  max-width: 1000px !important;
+  margin: auto;
+}
+
+.btn-link{
+  font-size: 10px !important;
+}
+
+.form-control{
+  border-radius: 10px !important;
+  border: 1px solid rgba(0, 0, 0, 0.15) !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
+  background-color: #f7f7f7 !important;
+}
